# tool-box

./: .gitignore  .lintstagedrc.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.go  go.mod  go.sum  lyrics.html  main.go  opencode.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  unocss.config.ts  vite.config.ts  vitest.config.ts  wails.json
.claude/: settings.local.json
.codebuddy/rules/: basic.mdc
.trae/: mcp.json
.trae/commands/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
.trae/documents/: plan_20260203_123546.md  为记账页面接入IndexedDB存储.md  实现播放界面点击展开全屏功能.md  记账页面增加数据的导入导出功能.md  记账页面实现计划.md
.trae/rules/: code-quality.md  code-style.md  component-development.md  environment.md  git-commit.md  naming-convention.md  notes.md  project_rules.md  tauri-commands.md  tech-stack.md
backend/core/: filesystem.go  index.go  read_file.go  utils.go
backend/filesystem/: model.go  read_dir.go  write_file.go
backend/httpmanage/: download.go  temp_reader.go
backend/utils/: error.go  os.go  output.go
frontend/: index.html  package.json  package.json.md5  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/router/: index.ts
frontend/src/types/: auto-imports.d.ts  components.d.ts
frontend/src/utils/: binary-file-types.ts
frontend/wailsjs/go/: models.ts
openspec/: AGENTS.md  config.yaml  project.md
openspec/changes/2025-12-25-optimize-music-player-communication/: proposal.md  tasks.md
openspec/changes/add-music-player/: proposal.md
openspec/specs/music-player/: optimize-player-communication.md  spec.md
src/: App.vue  lyrics.ts  main.ts  vite-env.d.ts  vue.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/src/: download.rs  file_search.rs  font.rs  lib.rs  lyrics.rs  lyrics_window.rs  main.rs  music_player.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/download/: core.rs  downloader.rs  limiter.rs  mod.rs  progress.rs  utils.rs
src-tauri/src/utils/: crypto.rs  mod.rs  os.rs  output.rs
src/assets/styles/: base.scss
src/backend-channel/: autostart.ts  desktop-lyrics.ts  download.ts  file-io.ts  file-search.ts  font.ts  lyrics.ts  music-player.ts  utils.ts  window.ts
src/backend-channel/models/: download.ts  file-search.ts  lyrics.ts  music-player.ts
src/components/: CountDown.vue
src/components/AppSettings/: AppSettings.vue  logic.ts
src/components/Layout/: Layout.vue  logic.ts
src/hooks/: usePersistentStorage.ts  useRuntimeEvent.ts
src/plugins/: pinia-storage-adapter.ts  plugins.d.ts
src/router/: index.ts
src/services/: lyricsService.ts
src/stores/: accounting.ts  appSettings.ts  download.ts  eyeProtection.ts  lyricsStore.ts  musicPlayer.ts  randomPicker.ts  router.ts  selection.ts  todo.ts
src/test/: setup.ts
src/types/: auto-imports.d.ts  common.d.ts  common.ts  components.d.ts  download.ts  lyrics.ts  pinia-store.ts
src/utils/: async-pool.ts  binary-file-types.ts  event.ts  id.ts  lyricsParser.ts  request.ts  storage.ts  system.ts  time.ts
src/utils/__tests__/: async-pool.test.ts  binary-file-types.test.ts  development.test.ts  download.test.ts  event.test.ts  lyricsParser.test.ts  promise.test.ts  request.test.ts  storage.test.ts  system.test.ts  time.test.ts
src/utils/download/: index.ts
src/utils/sql/: index.ts  indexeddb.ts  interface.ts  tauri-store.ts
src/utils/storage/: index.ts  indexeddb.ts  tauri-store.ts
src/views/Accounting/: Accounting.vue  logic.ts  storage.ts  types.ts
src/views/CanvasBoard/: CanvasBoard.vue  constants.ts  types.ts
src/views/Download/: Download.vue  dialog.ts  store.ts  types.ts
src/views/Todo/: Todo.vue  (+1 more)
(+169 files in other folders)
