[package]
name = "tool-box"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tool_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
sysinfo = "0.33.1"
anyhow = "1.0.95"
futures = "0.3"
log = "0.4.25"
async-recursion = "1.1.1"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
