[package]
name = "tool-box"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tool_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tokio = { version = "1.46.1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
sysinfo = "0.36.0"
anyhow = "1.0.98"
futures = "0.3.31"
log = "0.4.27"
async-recursion = "1.1.1"
tauri-plugin-notification = "2.3.0"
tauri-plugin-os = "2.3.0"
winreg = "0.50"
