[package]
name = "tool-box"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tool_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.2"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.26", features = ["json"] }
sysinfo = "0.37.2"
anyhow = "1.0.100"
futures = "0.3.31"
log = "0.4.29"
async-recursion = "1.1.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-store = "2.4.1"
winreg = "0.55.0"
md5 = "0.8.0"
tauri-plugin-http = "2.5.4"
chrono = "0.4"
base64 = "0.22"
symphonia = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.4.1"
